@@ -116,8 +116,9 @@ config.addPlatform = "Вектор-06Ц", "vector/vector.conf", "vector", "v"
 config.addPlatform = "Вектор-06Ц Z80", "vector/vector_z80.conf", "vector.z80", "vz"
 config.addPlatform = "ПК-01 Львов", "lvov/lvov.conf", "lvov", "lv"
 config.addPlatform = "ПК8020 Корвет", "korvet/korvet.conf", "korvet", "k"
-config.addPlatform = "ZX Spectrum (128K)", "zx/spec128k.conf", "zx", "zx"
-config.addPlatform = "ZX Spectrum 48K", "zx/spectrum.conf", "zx.48", "zx48"
+config.addPlatform = "ZX Spectrum (128K)", "zx/spectrum.conf", "zx", "zx"
+config.addPlatform = "ZX Spectrum 48K", "zx/spec48k.conf", "zx.48", "zx48"
+config.addPlatform = "Pentagon 128K", "zx/pentagon.conf", "zx.pentagon", "pent"
 
 
 
