@@ -1,2 +1,2 @@
-﻿define 128K
+﻿define PENTAGON
 include zx/spectrum.conf
