@@ -1,0 +1,2 @@
+﻿define 48K
+include zx/spectrum.conf
