@@ -1,14 +1,18 @@
-﻿ifndef 128K
+﻿ifdef 48K
   @NAME = "ZX Spectrum 48K"
 else
-  @NAME = "ZX Spectrum 128K"
+  ifdef PENTAGON
+    @NAME = "Pentagon 128K"
+  else
+    @NAME = "ZX Spectrum 128K"
+  endif
 endif
 
 if CFG_AY_TS == ON
   define TURBO_SOUND
 endif
 
-ifndef 128K
+ifdef 48K
   if CFG_AY_48K == OFF
     define NO_AY
   endif
@@ -24,6 +28,7 @@ endif
 # Основное ПЗУ
 @ROM48 = "zx/48k.rom"
 @ROM128 = "zx/128k.rom"
+#@ROMPENT = "zx/128k.rom"
 
 
 
@@ -84,7 +89,7 @@ platform.fastResetCpuTicks = 5800000
 # Code page: rk, koi8 (default = rk)
 platform.codePage = koi8
 
-ifndef 128K
+ifdef 48K
   Rom rom = @ROM48, 0x4000
 else
   Rom rom0 = @ROM128, 0x4000
@@ -97,7 +102,7 @@ Ram ram0 = 0x4000
 Ram ram1 = 0x4000
 Ram ram2 = 0x4000
 
-ifdef 128K
+ifndef 48K
   Ram ram3 = 0x4000
   Ram ram4 = 0x4000
   Ram ram5 = 0x4000
@@ -111,10 +116,14 @@ endif
 ZxRenderer crtRenderer
 crtRenderer.visibleArea = yes
 
-ifndef 128K
+ifdef 48K
   crtRenderer.screenMemory = &ram0
 else
-  crtRenderer.mode = "128k"
+  ifndef PENTAGON
+    crtRenderer.mode = "128k"
+  else
+    crtRenderer.mode = "pentagon"
+  endif
   crtRenderer.screenMemory = &ram5, 0
   crtRenderer.screenMemory = &ram7, 1
 endif
@@ -125,7 +134,7 @@ core.crtRenderer = &crtRenderer
 
 connect crtRenderer.int -> core.int
 
-ifdef 128K
+ifndef 48K
   AddrSpaceMapper cpu0 = 2
   AddrSpaceMapper cpu3 = 8
 
@@ -144,7 +153,7 @@ endif
 
 AddrSpace addrSpace
 
-ifndef 128K
+ifdef 48K
   addrSpace.range = &rom, 0, 0x3fff
   addrSpace.range = &ram0, 0x4000, 0x7fff
   addrSpace.range = &ram1, 0x8000, 0xbfff
@@ -158,13 +167,15 @@ endif
 
 ZxPorts zxPorts
 
-ifdef 128K
-  zxPorts.mode = "128k"
+ifdef 48K
+  zxPorts.mode = "48k"
+#else
+#  zxPorts.mode = "128k"
 endif
 
 connect zxPorts.portFE[0-2] -> crtRenderer.borderColor
 
-ifdef 128K
+ifndef 48K
   connect zxPorts.port7FFD[4] -> cpu0.page
   connect zxPorts.port7FFD[3] -> crtRenderer.screenPage
   connect zxPorts.port7FFD[0-2] -> cpu3.page
