@@ -7,9 +7,18 @@
   </head>
   <body>
     <h2>ZX Spectrum. Краткая справка</h2>
-    <h3>Загрузка файлов</h3>
+    <h3>Загрузка файлов </h3>
     <p>Поддерживается только flash-загрузка файлов в форматах tap и tzx (со
       стандартными блоками).Запись файлов возможна тольков формате tap.</p>
+    <h3>Конфигурации</h3>
+    <p>Доступно 3 конфигурации: 128K (по умолчанию), 48K и Pentagon 128K.В
+      конфигурациях 48K и 128K не поддерживается contended memory, из-за чего не
+      будут правильно работать мультиколорные и бордюрные эффекты. В
+      конфигурации Pentagon 128K реализована поддержка правильных таймингов, что
+      должно обеспечивать корректную поддержку мультиколора и бордюрных
+      эффектов.<br>
+    </p>
+    <h3></h3>
     <h3>Соответствие клавиш и раскладки клавиатуры </h3>
     <p>Для ПК «ZX Spectrum» возможно использовать «Умную» раскладку клавиатуры,
       однако ввод кирилицы для этого ПК недоступен. Для использования цифровых
