@@ -33,7 +33,6 @@ configTab.addControl = 1, &styleSelector
 ConfigRadioSelector mixSelector = &window, fieldsMixing, "Смешивание полукадров"
 mixSelector.addItem = none, "Выкл."
 mixSelector.addItem = mix, "Вкл."
-mixSelector.addItem = average, "Усреднять (старый метод)"
 mixSelector.addItem = interlace, "Чередование"
 mixSelector.addItem = scanline, "Имитация линий растра"
 configTab.addControl = 1, &mixSelector
