@@ -13,6 +13,8 @@
 * РК-86: исключен вывод постоянной составляющей на выходе таймера в режиме после сброса
 * ZX Spectrum: поддержка 2 AY по схеме NedoPC Turbo Sound
 * ZX Spectrum: возможность отключить AY для конфигурации 48К
+- ZX Spectrum: исправлено декодирование порта 7FFD, устранено зависание некоторых программ
++ ZX Spectrum: добавлена конфигурация для Pentagon 128K, реализованы корректные тайминги для этой модели
 
 
 Изменения в версии 4.0.521:
